--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Django==1.5.4
-South==0.8.4
-wsgiref==0.1.2
+Django==1.6.5
+djangorestframework==2.3.13
 django-tastypie==0.11.0
-PyYAML==3.10
 inflection==0.2.0
 python-mimeparse==0.1.4
+PyYAML==3.10
+South==0.8.4
+wsgiref==0.1.2
