--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   matrix:
     - DJANGO=1.6.5
 install:
-  - pip install -q coverage flake8 Django==$DJANGO
+  - pip install -r requirements.txt
 before_script:
   - flake8 . --max-line-length=120 --max-complexity=10 --exclude='env,migrations,*.egg'
   - psql -c 'CREATE DATABASE srllb;' -U postgres
