--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+coverage==3.7.1
 Django==1.6.5
 djangorestframework==2.3.13
 django-tastypie==0.11.0
+flake8==2.1.0
 inflection==0.2.0
 python-mimeparse==0.1.4
 PyYAML==3.10
